--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 anyio==3.6.2
+certifi==2022.12.7
+charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
 fastapi==0.94.1
@@ -6,6 +8,23 @@ h11==0.14.0
 idna==3.4
 pydantic==1.10.6
 python-dotenv==1.0.0
+requests==2.28.2
+sniffio==1.3.0
+starlette==0.26.1
+typing_extensions==4.5.0
+urllib3==1.26.15
+uvicorn==0.21.1
+anyio==3.6.2
+click==8.1.3
+colorama==0.4.6
+fastapi==0.94.1
+h11==0.14.0
+idna==3.4
+pyasn1==0.4.8
+pycryptodome==3.17
+pydantic==1.10.6
+python-dotenv==1.0.0
+rsa==4.9
 sniffio==1.3.0
 starlette==0.26.1
 typing_extensions==4.5.0
