--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 anyio==3.6.2
 certifi==2022.12.7
+chardet==3.0.4
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
 fastapi==0.94.1
-h11==0.14.0
-idna==3.4
+h11==0.8.1
+h2==3.2.0
+hpack==3.0.0
+http3==0.6.7
+hyperframe==5.2.0
+idna==2.10
 joblib==1.2.0
 pyasn1==0.4.8
 pycrypto==2.6.1
@@ -13,6 +18,8 @@ pycryptodome==3.17
 pydantic==1.10.6
 python-dotenv==1.0.0
 requests==2.28.2
+requests-async==0.6.2
+rfc3986==1.5.0
 rsa==4.9
 sniffio==1.3.0
 starlette==0.26.1
