--- a/compose/p5-d4-c1-docker-compose.yml
+++ b/compose/p5-d4-c1-docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 name: "blockchain_cluster"
 
-x-env-variables: &env-variables
+env-variables: &env-variables
   PARTICIPANTS: 5
   DIFFICULTY: 4
   CAPACITY: 1
