--- a/requirements.txt
+++ b/requirements.txt
@@ -4,26 +4,38 @@ chardet==3.0.4
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
+contourpy==1.1.1
+cycler==0.11.0
 fastapi==0.94.1
+fonttools==4.42.1
 h11==0.8.1
 h2==3.2.0
 hpack==3.0.0
 http3==0.6.7
 hyperframe==5.2.0
 idna==2.10
+importlib-resources==6.1.0
 joblib==1.2.0
+kiwisolver==1.4.5
+matplotlib==3.7.3
+numpy==1.24.4
+packaging==23.1
+Pillow==10.0.1
 pyasn1==0.4.8
-pycrypto==2.6.1
 pycryptodome==3.17
 pydantic==1.10.6
+pyparsing==3.1.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 requests==2.28.2
 requests-async==0.6.2
 rfc3986==1.5.0
 rsa==4.9
+six==1.16.0
 sniffio==1.3.0
 starlette==0.26.1
+typer==0.9.0
 typing_extensions==4.5.0
 urllib3==1.26.15
 uvicorn==0.21.1
-typer
+zipp==3.17.0
